# FFmpeg

./: .gitignore
doc/examples/: .gitignore  CMakeLists.txt  README.md
